--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-vertical-timeline-component": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
