--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apartment-club",
+  "name": "fractal-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -37,6 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://google.com"
+  }
 }
