--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-plugin-root-import": "^6.4.1",
+    "bootstrap": "^4.3.1",
     "connected-react-router": "^6.5.2",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
@@ -12,12 +13,16 @@
     "react-app-rewired": "^2.1.3",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-fade-in": "^0.1.6",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-redux": "7.1.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
+    "react-tabs": "^3.0.0",
     "redux": "4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
