--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
+    "react-stripe-elements": "^6.0.1",
     "react-tabs": "^3.0.0",
     "redux": "4.0.4",
     "redux-devtools-extension": "^2.13.8",
