--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
     "axios": "^0.19.0",
     "babel-plugin-root-import": "^6.4.1",
     "bootstrap": "^4.3.1",
-    "connected-react-router": "^6.5.2",
+    "connected-react-router": "^6.0.0",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
     "react": "^16.10.2",
     "react-app-rewired": "^2.1.3",
-    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.10.2",
     "react-fade-in": "^0.1.6",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
+    "react-native-progress": "^4.0.2",
+    "react-progress-bar.js": "^0.2.3",
     "react-redux": "7.1.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^3.2.0",
+    "react-spinners": "^0.6.1",
     "react-stripe-elements": "^6.0.1",
     "react-tabs": "^3.0.0",
     "redux": "4.0.4",
