--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "7.1.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^3.2.0",
     "react-spinners": "^0.6.1",
