--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.19.0",
     "babel-plugin-root-import": "^6.4.1",
     "bootstrap": "^4.3.1",
@@ -11,6 +14,7 @@
     "enzyme-adapter-react-16": "1.14.0",
     "react": "^16.10.2",
     "react-app-rewired": "^2.1.3",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.10.2",
     "react-fade-in": "^0.1.6",
