--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-stripe-elements": "^6.0.1",
     "react-tabs": "^3.0.0",
     "react-typeform-embed": "^0.2.1",
+    "reactjs-popup": "^1.5.0",
     "redux": "4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
