--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "git-branch": "^2.0.1",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -100,8 +101,8 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start": "set NODE_ENV='development' && node scripts/start.js",
+    "build": "set NODE_ENV='production' && node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
