--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-icons": "^3.7.0",
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
+    "react-meta-tags": "^0.7.4",
     "react-native-progress": "^4.0.2",
     "react-progress-bar.js": "^0.2.3",
     "react-redux": "7.1.0",
