--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.6",
     "react-app-rewired": "^2.1.3",
+    "react-autocomplete": "^1.8.1",
     "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dev-utils": "^10.2.0",
