--- a/package.json
+++ b/package.json
@@ -4,79 +4,87 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.8.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@popperjs/core": "^2.4.0",
     "@svgr/webpack": "4.3.3",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "axios": "^0.19.0",
+    "@typescript-eslint/eslint-plugin": "^2.32.0",
+    "@typescript-eslint/parser": "^2.32.0",
+    "axios": "^0.19.2",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-plugin-root-import": "^6.4.1",
+    "babel-plugin-root-import": "^6.5.0",
     "babel-preset-react-app": "9.0.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "connected-react-router": "^6.0.0",
+    "connected-react-router": "^6.8.0",
+    "core-js": "^3.6.5",
+    "corejs": "^1.0.0",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
     "eslint": "^6.6.0",
-    "eslint-config-react-app": "^5.2.0",
+    "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
-    "eslint-plugin-flowtype": "4.6.0",
+    "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "2.20.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.18.0",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "fsevents": "^2.1.3",
     "git-branch": "^2.0.1",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
+    "immutable": "^4.0.0-rc.12",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.0",
+    "popper.js": "^1.16.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.10.2",
+    "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
-    "react-app-rewired": "^2.1.3",
+    "react-app-rewired": "^2.1.6",
     "react-autocomplete": "^1.8.1",
     "react-autosuggest": "^9.4.3",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dev-utils": "^10.2.0",
-    "react-dom": "^16.10.2",
-    "react-fade-in": "^0.1.6",
+    "react-bootstrap": "^1.0.1",
+    "react-dev-utils": "^10.2.1",
+    "react-dom": "^16.13.1",
+    "react-fade-in": "^0.1.8",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.7.0",
+    "react-icons": "^3.10.0",
     "react-image": "^2.4.0",
     "react-image-fade-in": "^1.1.0",
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
     "react-meta-tags": "^0.7.4",
-    "react-native-progress": "^4.0.2",
+    "react-native": "^0.62.2",
+    "react-native-progress": "^4.1.2",
     "react-progress-bar.js": "^0.2.3",
-    "react-redux": "7.1.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^1.2.2",
     "react-router-redux": "^4.0.8",
+    "react-scripts": "^3.4.1",
     "react-spinners": "^0.6.1",
-    "react-stripe-elements": "^6.0.1",
-    "react-tabs": "^3.0.0",
+    "react-stripe-elements": "^6.1.2",
+    "react-tabs": "^3.1.0",
     "react-typeform-embed": "^0.2.1",
     "reactjs-popup": "^1.5.0",
     "redux": "4.0.4",
@@ -87,20 +95,22 @@
     "redux-promise": "^0.6.0",
     "redux-saga": "1.0.5",
     "redux-saga-test-plan": "4.0.0-beta.4",
-    "request": "^2.88.0",
+    "request": "^2.88.2",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
-    "schema-utils": "^2.4.1",
+    "schema-utils": "^2.6.6",
+    "seamless-immutable": "^7.1.4",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.4",
     "ts-pnp": "1.1.5",
     "typesafe-actions": "4.4.2",
+    "typescript": "^3.8.3",
     "url-loader": "2.3.0",
     "vivus": "^0.4.5",
     "webpack": "4.41.5",
-    "webpack-dev-server": "3.10.2",
+    "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
   },
@@ -130,8 +140,7 @@
     "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/react-redux": "7.1.1",
     "@types/redux-mock-store": "1.0.1",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "file-loader": "^4.2.0"
+    "babel-plugin-module-resolver": "^3.2.0"
   },
   "jest": {
     "roots": [
