--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "@babel/plugin-proposal-numeric-separator": "^7.8.3",
     "@types/enzyme": "3.10.3",
     "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/react-dev-utils": "^9.0.4",
     "@types/react-redux": "7.1.1",
     "@types/redux-mock-store": "1.0.1",
     "babel-plugin-module-resolver": "^3.2.0"
