--- a/package.json
+++ b/package.json
@@ -140,7 +140,8 @@
     "@types/react-dev-utils": "^9.0.4",
     "@types/react-redux": "7.1.1",
     "@types/redux-mock-store": "1.0.1",
-    "babel-plugin-module-resolver": "^3.2.0"
+    "babel-plugin-module-resolver": "^3.2.0",
+    "prettier": "^2.0.5"
   },
   "jest": {
     "roots": [
