--- a/package.json
+++ b/package.json
@@ -8,19 +8,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@popperjs/core": "^2.4.0",
-    "@svgr/webpack": "4.3.3",
     "@typescript-eslint/eslint-plugin": "^2.32.0",
     "@typescript-eslint/parser": "^2.32.0",
     "axios": "^0.19.2",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-plugin-root-import": "^6.5.0",
-    "babel-preset-react-app": "9.0.0",
     "bootstrap": "^4.4.1",
     "camelcase": "^5.3.1",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "connected-react-router": "^6.8.0",
     "core-js": "^3.6.5",
     "corejs": "^1.0.0",
@@ -39,7 +31,6 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "fs-extra": "^8.1.0",
     "git-branch": "^2.0.1",
-    "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "immutable": "^4.0.0-rc.12",
     "jest": "24.9.0",
@@ -48,8 +39,6 @@
     "jest-watch-typeahead": "0.4.2",
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.6.0",
     "popper.js": "^1.16.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -102,19 +91,15 @@
     "seamless-immutable": "^7.1.4",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
-    "terser-webpack-plugin": "2.3.4",
     "ts-pnp": "1.1.5",
     "typesafe-actions": "4.4.2",
     "typescript": "^3.8.3",
     "url-loader": "2.3.0",
-    "vivus": "^0.4.5",
-    "webpack": "4.41.5",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "vivus": "^0.4.5"
   },
   "scripts": {
-    "start": "set NODE_ENV='development' && node scripts/start.js",
+    "start": "set NODE_ENV='development' && run-p start:**",
+    "start:app": "react-scripts start",
     "build": "set CI='' && set NODE_ENV='production' && node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -141,6 +126,7 @@
     "@types/react-redux": "7.1.1",
     "@types/redux-mock-store": "1.0.1",
     "babel-plugin-module-resolver": "^3.2.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5"
   },
   "jest": {
