update app.json with all apps

--- a/src/assets/data/apps.json
+++ b/src/assets/data/apps.json
@@ -18,6 +18,24 @@
         "link": "https://www.zoom.us/"
     },
     {
+        "name": "Skype",
+        "category": "Productivity",
+        "image": "skype.png",
+        "link": "https://www.skype.com/en/"
+    },
+    {
+        "name": "Microsoft Office",
+        "category": "Productivity",
+        "image": "office.png",
+        "link": "https://www.office.com/"
+    },
+    {
+        "name": "Spotify",
+        "category": "Productivity",
+        "image": "spotify.png",
+        "link": "https://www.spotify.com/us/"
+    },
+    {
         "name": "Steam",
         "category": "Gaming",
         "image": "steam.png",
@@ -30,10 +48,52 @@
         "link": "https://discord.com/"
     },
     {
+        "name": "Epic Games",
+        "category": "Gaming",
+        "image": "epic_games.png",
+        "link": "https://www.epicgames.com/store/en-US/"
+    },
+    {
+        "name": "Blizzard",
+        "category": "Gaming",
+        "image": "blizzard.png",
+        "link": "https://www.blizzard.com/en-us/"
+    },
+    {
+        "name": "GeForce Experience",
+        "category": "Gaming",
+        "image": "geforce.png",
+        "link": "https://www.nvidia.com/en-us/geforce/geforce-experience/"
+    },
+    {
+        "name": "GOG",
+        "category": "Gaming",
+        "image": "gog.png",
+        "link": "https://www.gog.com/"
+    },
+    {
         "name": "Blender",
         "category": "Creative",
         "image": "blender.png",
         "link": "https://www.blender.org/"
+    },
+    {
+        "name": "Cinema 4D",
+        "category": "Creative",
+        "image": "cinema_4d.png",
+        "link": "https://www.maxon.net/en-us/products/cinema-4d/overview/"
+    },
+    {
+        "name": "Lightworks",
+        "category": "Creative",
+        "image": "lightworks.png",
+        "link": "https://www.lwks.com/"
+    },
+    {
+        "name": "Autodesk Fusion 360",
+        "category": "Creative",
+        "image": "fusion.png",
+        "link": "https://www.autodesk.com/products/fusion-360/overview"
     },
     {
         "name": "Git",
@@ -46,5 +106,83 @@
         "category": "Developer",
         "image": "atom.png",
         "link": "https://atom.io/"
+    },
+    {
+        "name": "OpenCV",
+        "category": "Developer",
+        "image": "opencv.png",
+        "link": "https://opencv.org/"
+    },
+    {
+        "name": "CUDA",
+        "category": "Developer",
+        "image": "cuda.jpeg",
+        "link": "https://developer.nvidia.com/cuda-zone"
+    },
+    {
+        "name": "LLVM",
+        "category": "Developer",
+        "image": "llvm.png",
+        "link": "https://llvm.org/"
+    },
+    {
+        "name": "Anaconda",
+        "category": "Developer",
+        "image": "anaconda.png",
+        "link": "https://www.anaconda.com/"
+    },
+    {
+        "name": "Docker",
+        "category": "Developer",
+        "image": "docker.png",
+        "link": "https://www.docker.com/"
+    },
+    {
+        "name": "cURL",
+        "category": "Developer",
+        "image": "curl.png",
+        "link": "https://curl.haxx.se/"
+    },
+    {
+        "name": "CMake",
+        "category": "Developer",
+        "image": "cmake.png",
+        "link": "https://cmake.org/"
+    },
+    {
+        "name": "Visual Studio Code",
+        "category": "Developer",
+        "image": "vscode.png",
+        "link": "https://code.visualstudio.com/"
+    },
+    {
+        "name": "Visual Studio Professional",
+        "category": "Developer",
+        "image": "vs_pro.png",
+        "link": "https://visualstudio.microsoft.com/vs/professional/"
+    },
+    {
+        "name": "Visual C++ Redistribuable",
+        "category": "Developer",
+        "image": "visual_redist.png",
+        "link": "https://support.microsoft.com/en-us/help/2977003/the-latest-supported-visual-c-downloads"
+    },
+    {
+        "name": "Cppcheck",
+        "category": "Developer",
+        "image": "cppcheck.png",
+        "link": "http://cppcheck.sourceforge.net/"
+    },
+    {
+        "name": "7-Zip",
+        "category": "Developer",
+        "image": "7zip.png",
+        "link": "https://www.7-zip.org/"
+    },
+    {
+        "name": "Windows Subsystem for Linux",
+        "category": "Developer",
+        "image": "wsl.png",
+        "link": "https://docs.microsoft.com/en-us/windows/wsl/install-win10"
     }
 ]
