--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,9 +6,9 @@ name: Node.js CI
 
 on:
     push:
-        branches: [master]
+        branches: [ master, staging ]
     pull_request:
-        branches: [master]
+        branches: [ master, staging ]
 
 jobs:
     build:
