--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,9 +6,9 @@ name: Node.js CI
 
 on:
     push:
-        branches: [master]
+        branches: [ master, staging ]
     pull_request:
-        branches: [master]
+        branches: [ master, staging ]
 
 jobs:
     build:
@@ -27,4 +27,3 @@ jobs:
             - run: npm ci
             - run: npm run build --if-present
             - run: npm run format
-        # - run: npm test # TODO: make tests
