--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,6 +1,6 @@
-# This workflow will format via Prettier
+# This workflow will format with Prettier
 
-name: lint
+name: Lint
 
 on: push
 
@@ -9,18 +9,24 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
+              
             - name: Use Node.js 12
               uses: actions/setup-node@v1
               with:
                   node-version: 12
-            - run: npm install --global prettier
-            - name: lint
+
+            - name: Install Prettier
+              run: npm install --global prettier
+              
+            - name: Format with Prettier
               run: npm run format --write
+              
             - name: Commit files
               run: |
                   git config --local user.email "linter@fractalcomputers.com"
-                  git config --local user.name "fractal linter"
-                  git diff-index --quiet HEAD || git commit -m "Linted with prettier" -a
+                  git config --local user.name "Fractal Linter"
+                  git diff-index --quiet HEAD || git commit -m "Linted with Prettier" -a
+                  
             - name: Push changes
               uses: ad-m/github-push-action@master
               with:
