--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "jest-watch-typeahead": "0.4.2",
         "jquery": "^3.5.1",
         "logkitty": "^0.7.1",
+        "logrocket": "^1.0.10",
         "mini-css-extract-plugin": "0.9.0",
         "optimize-css-assets-webpack-plugin": "5.0.3",
         "pnp-webpack-plugin": "1.6.0",
