--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,34 +1,34 @@
-# This workflow will format with Prettier
+# This workflow will format via Prettier
 
-name: Lint
+name: npm lint
 
-on: push
+on:
+  pull_request:
+    branches: [ master, staging ]
 
 jobs:
-    lint:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
+  lint:
+    runs-on: ubuntu-latest
+        
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
               
-            - name: Use Node.js 12
-              uses: actions/setup-node@v1
-              with:
-                  node-version: 12
+      - name: Use Node.js 12
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          
+      - name: Install Prettier
+        run: npm install --global prettier
 
-            - name: Install Prettier
-              run: npm install --global prettier
-              
-            - name: Format with Prettier
-              run: npm run format --write
-              
-            - name: Commit files
-              run: |
-                  git config --local user.email "linter@fractalcomputers.com"
-                  git config --local user.name "Fractal Linter"
-                  git diff-index --quiet HEAD || git commit -m "Linted with Prettier" -a
-                  
-            - name: Push changes
-              uses: ad-m/github-push-action@master
-              with:
-                github_token: ${{ secrets.GITHUB_TOKEN }}
-                branch: ${{ github.ref }}
+      - name: Lint with Prettier
+        run: npm run format --write
+
+      - name: Commit files
+        run: |
+          git config --local user.email "linter@fractalcomputers.com"
+          git config --local user.name "Fractal Linter"
+          git diff-index --quiet HEAD || (echo "To pass this check please lint the code with Prettier" && false)
