--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 node_modules/
 /.pnp
 .pnp.js
+package-lock.json
 
 # testing
 /coverage
@@ -19,6 +20,7 @@ node_modules/
 .env.test.local
 .env.production.local
 
+# package manager
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
