--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "logkitty": "^0.7.1",
         "logrocket": "^1.0.10",
         "mini-css-extract-plugin": "0.9.0",
+        "moment": "^2.27.0",
         "optimize-css-assets-webpack-plugin": "5.0.3",
         "pnp-webpack-plugin": "1.6.0",
         "popper.js": "^1.16.1",
