--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,8 +3,6 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ master, staging ]
   pull_request:
     branches: [ master, staging ]
 
@@ -14,10 +12,13 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [ 10.x, 12.x ]
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
               
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
