--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "eslint-plugin-react-hooks": "^1.6.1",
         "fs-extra": "^8.1.0",
         "git-branch": "^2.0.1",
+        "graphql": "^15.3.0",
         "html-webpack-plugin": "4.0.0-beta.11",
         "identity-obj-proxy": "3.0.0",
         "immutable": "^4.0.0-rc.12",
