--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@fortawesome/react-fontawesome": "^0.1.11",
         "@popperjs/core": "^2.4.4",
         "@svgr/webpack": "4.3.3",
+        "@sentry/react" : "5.21.1",
         "@typescript-eslint/eslint-plugin": "^2.32.0",
         "@typescript-eslint/parser": "^2.32.0",
         "axios": "^0.19.2",
