Set REACT_APP_VERSION for production builds

--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     },
     "scripts": {
         "start": "export REACT_APP_VERSION=$(git rev-parse HEAD) && set NODE_ENV='development' && node scripts/start.js",
-        "build": "set CI='' && set NODE_ENV='production' && node scripts/build.js",
+        "build": "export REACT_APP_VERSION=$(git rev-parse HEAD) && set CI='' && set NODE_ENV='production' && node scripts/build.js",
         "test": "node scripts/test.js",
         "format": "prettier --write ."
     },
