test react app dev

--- a/package.json
+++ b/package.json
@@ -120,8 +120,8 @@
         "workbox-webpack-plugin": "4.3.1"
     },
     "scripts": {
-        "start": "set REACT_APP_VERSION=$(git rev-parse HEAD) && set NODE_ENV='development' && node scripts/start.js",
-        "build": "set REACT_APP_VERSION=$(git rev-parse HEAD) && set CI='' && set NODE_ENV='production' && node scripts/build.js",
+        "start": "set NODE_ENV='development' && node scripts/start.js",
+        "build": "set CI='' && set NODE_ENV='production' && node scripts/build.js",
         "test": "node scripts/test.js",
         "format": "prettier --write ."
     },
