build staging node env

--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     },
     "scripts": {
         "start": "set NODE_ENV='development' && node scripts/start.js",
-        "build-staging": "set CI='' && set NODE_ENV='staging' && node scripts/build.js",
+        "build-staging": "set CI='' && set NODE_ENV='staging' && node scripts/build-staging.js",
         "build-production": "set CI='' && set NODE_ENV='production' && node scripts/build.js",
         "test": "node scripts/test.js",
         "format": "prettier --write ."
