--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "@fortawesome/free-solid-svg-icons": "^5.14.0",
         "@fortawesome/react-fontawesome": "^0.1.11",
         "@popperjs/core": "^2.4.4",
-        "@svgr/webpack": "4.3.3",
+        "@sentry/cli": "^1.56.1",
         "@sentry/react": "5.21.1",
         "@sentry/webpack-plugin": "1.12.1",
+        "@svgr/webpack": "4.3.3",
         "@typescript-eslint/eslint-plugin": "^2.32.0",
         "@typescript-eslint/parser": "^2.32.0",
         "axios": "^0.19.2",
